crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_003.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 38
payload:
  Invalid:
    message: "Cut(RpcValueParseFailed { method: \"BasePlayerCreate::spaID\", argnum: 1, argtype: \"Property { name: \\\"spaID\\\", prop_type: Primitive(Int64), flags: BaseAndClient }\", error: \"Parse(Backtrack(ContextError { context: [], cause: None }))\" })"
    raw:
      - 134
      - 197
      - 14
      - 0
      - 3
      - 0
      - 0
      - 0
      - 0
      - 0
