crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_005.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 0
payload:
  BasePlayerCreate:
    component_data:
      - 1
      - 0
      - 0
      - 0
      - 2
    entity_id: 968070
    entity_type: Avatar
    props:
      attrs: 17935783428105
