crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_014.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 8
payload:
  OnGameRoomStateChanged:
    player_states:
      - id: 939932564
        isConnected: true
